example/src/main/deploy/resource-descriptors/hono-service-device-registry/hono-service-device-registry-deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: hono-service-device-registry
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-service-device-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hono-service-device-registry
      group: ${project.groupId}
  template:
    metadata:
      labels:
        app: hono-service-device-registry
        version: "${project.version}"
        group: ${project.groupId}
    spec:
      containers:
      - image: eclipse/hono-service-device-registry:${project.version}
        imagePullPolicy: IfNotPresent
        name: eclipse-hono-service-device-registry
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 5671
          protocol: TCP
        - containerPort: 5672
          protocol: TCP
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /var/lib/hono/device-registry
          name: registry
        - mountPath: /etc/hono
          name: conf
          readOnly: true
        resources:
          limits:
            memory: "160Mi"
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 180
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8088
            scheme: HTTP
          initialDelaySeconds: 10
      volumes:
      - name: registry
        persistentVolumeClaim:
          claimName: registry
      - name: conf
        secret:
          secretName: hono-service-device-registry-conf
